--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-<!D<!-- frontend/index.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -7,84 +6,187 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GAIA 모의고사 복습 사이트</title>
   <style>
-    body { margin:0; padding:1rem; font-family:sans-serif; background:#f9f9f9; }
-    .container { max-width:400px; margin:0 auto; background:white; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
-    h1 { margin:0 0 .5rem; font-size:1.5rem; text-align:center; }
-    .home-button { display:flex; align-items:center; cursor:pointer; margin-bottom:1rem; color:#007bff; }
-    .home-button img { width:16px; height:16px; margin-right:.25rem; }
-    input, select, button { display:block; width:100%; padding:.75rem; font-size:1rem; margin:.5rem 0; box-sizing:border-box; border:1px solid #ccc; border-radius:4px; }
-    button { background:#007bff; color:white; border:none; }
-    p.error { color:#d00; font-size:.9rem; text-align:center; }
-    .menu-button { background:#28a745; color:white; font-size:1rem; margin-bottom:.75rem; }
-    .report-img { display:block; max-width:100%; margin:0 auto; }
-    .hidden { display:none !important; }
-
-    /* 문제 화면 */
-    #questionImage { width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
-    #choiceButtons { text-align:center; }
+    /* 기본 레이아웃 */
+    body {
+      margin: 0;
+      padding: 1rem;
+      font-family: sans-serif;
+      background: #f9f9f9;
+    }
+    .container {
+      max-width: 400px;
+      margin: 0 auto;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    h1 {
+      margin: 0 0 0.5rem;
+      font-size: 1.5rem;
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    /* 로그인/메인 GIF */
+    .top-gif {
+      display: block;
+      width: 100%;
+      max-width: 200px;
+      height: auto;
+      margin: 0 auto 1rem;
+    }
+    /* 홈 버튼 */
+    .home-button {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      margin-bottom: 1rem;
+      color: #007bff;
+    }
+    .home-button img {
+      width: 16px;
+      height: 16px;
+      margin-right: 0.25rem;
+    }
+    /* 공통 입력 요소 */
+    input, select, button {
+      display: block;
+      width: 100%;
+      padding: 0.75rem;
+      font-size: 1rem;
+      margin: 0.5rem 0;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      background: #007bff;
+      color: white;
+      border: none;
+    }
+    p.error {
+      color: #d00;
+      font-size: 0.9rem;
+      margin: 0.25rem 0 0;
+      text-align: center;
+    }
+    /* 메뉴 버튼 */
+    .menu-button {
+      background: #28a745;
+      color: white;
+      font-size: 1rem;
+      margin-bottom: 0.75rem;
+    }
+    .menu-button:nth-child(2) { background: #ffc107; }
+    .menu-button:nth-child(3) { background: #dc3545; }
+    .hidden {
+      display: none !important;
+    }
+    .report-img {
+      display: block;
+      max-width: 100%;
+      margin: 0 auto;
+    }
+    /* 틀린 문제 전용 스타일 */
+    #questionImage {
+      width: 100%;
+      height: auto;
+      margin: 1rem 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    #choiceButtons {
+      text-align: center;
+    }
     #choiceButtons button {
-      display:inline-block; width:18%; margin:1%; padding:.75rem 0;
-      font-size:1rem; border:1px solid #007bff; border-radius:4px;
-      background:white; color:#007bff; cursor:pointer;
+      display: inline-block;
+      width: 18%;
+      margin: 1%;
+      padding: 0.75rem 0;
+      font-size: 1rem;
+      border: 1px solid #007bff;
+      border-radius: 4px;
+      background: white;
+      color: #007bff;
+      cursor: pointer;
     }
     #submitButton, #skipButton {
-      display:block; width:100%; margin:1rem 0; padding:.75rem;
-      font-size:1rem; border:none; border-radius:4px; cursor:pointer;
+      display: block;
+      width: 100%;
+      margin: 1rem 0;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
     }
-    #submitButton { background:#007bff; }
-    #skipButton   { background:#6c757d; }
-
-    /* 피드백 화면 */
-    #feedback { text-align:center; font-size:1.1rem; margin-top:1rem; }
+    #submitButton { background: #007bff; }
+    #skipButton   { background: #6c757d; }
+    #feedback {
+      text-align: center;
+      font-size: 1.1rem;
+      margin-top: 1rem;
+    }
     #retryButton, #explainButton {
-      display:block; width:100%; padding:.75rem; margin:.5rem 0; font-size:1rem;
-      border:none; border-radius:4px; cursor:pointer;
+      display: block;
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0;
+      font-size: 1rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
     }
-    #retryButton { background:#007bff; }
-    #explainButton { background:#17a2b8; }
+    #retryButton   { background: #007bff; color: white; }
+    #explainButton { background: #17a2b8; color: white; }
   </style>
 </head>
 <body>
   <div class="container">
+    <!-- 홈 버튼 -->
     <div id="homeButton" class="home-button hidden">
-      <img src="icons/home.png" alt="Home"><span>처음으로</span>
+      <img src="icons/home.png" alt="Home"> <span>처음으로</span>
     </div>
 
-    <!-- 로그인 -->
+    <!-- ① 로그인 페이지 -->
     <div id="loginSection">
       <h1>GAIA 모의고사 복습 사이트</h1>
-      <img src="globe.gif" class="top-gif" alt="Globe">
-      <input id="loginId" placeholder="리클래스 ID 입력">
+      <img src="globe.gif" class="top-gif" alt="Globe 로고">
+      <input type="text" id="loginId" placeholder="리클래스 ID 입력">
       <button id="loginBtn">로그인</button>
       <p id="loginMsg" class="error"></p>
     </div>
 
-    <!-- 회차 선택 -->
+    <!-- ② 회차 선택 페이지 -->
     <div id="examSection" class="hidden">
-      <h1>회차 선택</h1>
+      <h1>GAIA 모의고사 복습 사이트</h1>
       <select id="examSelect"></select>
       <button id="examBtn">회차 선택</button>
       <p id="examMsg" class="error"></p>
     </div>
 
-    <!-- 메뉴 -->
+    <!-- ③ 메뉴 페이지 -->
     <div id="menuSection" class="hidden">
-      <h1>메뉴</h1>
-      <button id="menuReport" class="menu-button">내 성적표 확인</button>
-      <button id="menuReview" class="menu-button">틀린 문제 다시 풀기</button>
+      <h1>GAIA 모의고사 복습 사이트</h1>
+      <button id="menuReport" class="menu-button">1. 내 성적표 확인</button>
+      <button id="menuReview" class="menu-button">2. 틀린 문제 다시 풀기</button>
+      <button id="menuQuiz" class="menu-button">3. 틀린 문제 O/X 퀴즈</button>
       <p id="menuMsg" class="error"></p>
     </div>
 
-    <!-- 성적표 -->
+    <!-- ④ 성적표 표시 페이지 -->
     <div id="reportSection" class="hidden">
       <h1>내 성적표</h1>
-      <img id="reportImage" class="report-img" alt="성적표">
+      <img id="reportImage" class="report-img" alt="성적표 이미지">
       <p id="reportMsg" class="error"></p>
     </div>
 
-    <!-- 틀린 문제 다시 풀기 -->
+    <!-- ⑤ 틀린 문제 다시 풀기 -->
     <div id="reviewSection" class="hidden">
       <h1>틀린 문제 다시 풀기</h1>
+
       <!-- 문제 화면 -->
       <div id="reviewQuestion">
         <img id="questionImage" class="hidden" alt="문제 이미지">
@@ -93,6 +195,7 @@
         <button id="skipButton"   class="hidden">SKIP</button>
         <p id="reviewMsg" class="error"></p>
       </div>
+
       <!-- 피드백 화면 -->
       <div id="reviewFeedback" class="hidden">
         <p id="feedback"></p>
@@ -103,136 +206,162 @@
   </div>
 
   <script>
-    let currentId='', currentExam='', wrongList=[], currentWrongIndex=0, selectedAnswer=null;
+    let currentId = '', currentExam = '';
+    let wrongList = [], currentWrongIndex = 0, selectedAnswer = null;
 
     function hideAll() {
       ['loginSection','examSection','menuSection','reportSection','reviewSection']
         .forEach(id=>document.getElementById(id).classList.add('hidden'));
     }
     function clearAllMsgs() {
-      ['loginMsg','examMsg','reviewMsg','feedback']
+      ['loginMsg','examMsg','menuMsg','reviewMsg','feedback']
         .forEach(id=>document.getElementById(id).textContent='');
     }
-    function hideReviewUI() {
+    function resetReviewUI() {
       document.getElementById('questionImage').classList.add('hidden');
       document.querySelectorAll('#choiceButtons button').forEach(b=>b.remove());
-      ['submitButton','skipButton','retryButton','explainButton'].forEach(id=>
-        document.getElementById(id).classList.add('hidden'));
-      selectedAnswer=null;
+      ['submitButton','skipButton','retryButton','explainButton','reviewFeedback']
+        .forEach(id=>document.getElementById(id).classList.add('hidden'));
+      selectedAnswer = null;
     }
 
-    // ① 로그인
-    document.getElementById('loginBtn').onclick=()=>{
-      clearAllMsgs(); hideReviewUI();
-      const id=document.getElementById('loginId').value.trim();
-      if(!id){document.getElementById('loginMsg').textContent='ID를 입력하세요'; return;}
+    // 로그인
+    document.getElementById('loginBtn').onclick = () => {
+      clearAllMsgs(); resetReviewUI();
+      const id = document.getElementById('loginId').value.trim();
+      if (!id) {
+        document.getElementById('loginMsg').textContent = 'ID를 입력하세요';
+        return;
+      }
       fetch(`/api/authenticate?id=${encodeURIComponent(id)}`)
-        .then(r=>r.json()).then(d=>{
-          if(d.authenticated){
-            currentId=id; hideAll();
+        .then(r => r.json()).then(d => {
+          if (d.authenticated) {
+            currentId = id;
+            hideAll();
             document.getElementById('examSection').classList.remove('hidden');
             // 회차 로드
             fetch('/api/exams').then(r=>r.json()).then(exs=>{
-              const sel=document.getElementById('examSelect');
-              sel.innerHTML=''; exs.forEach(e=>sel.add(new Option(e,e)));
+              const sel = document.getElementById('examSelect');
+              sel.innerHTML = '';
+              exs.forEach(e=>sel.add(new Option(e,e)));
             });
           } else {
-            document.getElementById('loginMsg').textContent='인증되지 않은 ID입니다';
+            document.getElementById('loginMsg').textContent = '인증되지 않은 ID입니다';
           }
-        }).catch(()=>document.getElementById('loginMsg').textContent='인증 오류');
+        })
+        .catch(() => document.getElementById('loginMsg').textContent = '인증 오류');
     };
 
-    // ② 회차 선택
-    document.getElementById('examBtn').onclick=()=>{
-      clearAllMsgs(); hideReviewUI();
-      const ex=document.getElementById('examSelect').value;
-      if(!ex){document.getElementById('examMsg').textContent='회차 선택';return;}
-      currentExam=ex; hideAll();
+    // 회차 선택
+    document.getElementById('examBtn').onclick = () => {
+      clearAllMsgs(); resetReviewUI();
+      const ex = document.getElementById('examSelect').value;
+      if (!ex) {
+        document.getElementById('examMsg').textContent = '회차 선택';
+        return;
+      }
+      currentExam = ex;
+      hideAll();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
 
-    // ③ 내 성적표
-    document.getElementById('menuReport').onclick=()=>{
-      hideAll(); clearAllMsgs(); hideReviewUI();
+    // 내 성적표
+    document.getElementById('menuReport').onclick = () => {
+      hideAll(); clearAllMsgs(); resetReviewUI();
       document.getElementById('reportSection').classList.remove('hidden');
       fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(r=>r.json()).then(d=>{
-          if(d.url) document.getElementById('reportImage').src=d.url;
-          else      document.getElementById('reportMsg').textContent=d.error;
-        }).catch(()=>document.getElementById('reportMsg').textContent='로드 오류');
+        .then(r => r.json()).then(d => {
+          if (d.url) document.getElementById('reportImage').src = d.url;
+          else       document.getElementById('reportMsg').textContent = d.error;
+        })
+        .catch(() => document.getElementById('reportMsg').textContent = '로드 오류');
     };
 
-    // ④ 틀린 문제 다시 풀기
-    document.getElementById('menuReview').onclick=()=>{
-      hideAll(); clearAllMsgs(); hideReviewUI();
+    // 틀린 문제 다시 풀기
+    document.getElementById('menuReview').onclick = () => {
+      hideAll(); clearAllMsgs(); resetReviewUI();
       document.getElementById('reviewSection').classList.remove('hidden');
       fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(r=>r.json()).then(d=>{
-          wrongList=d.wrongList.map(x=>x.question);
-          currentWrongIndex=0; loadQ(wrongList[0]);
-        }).catch(()=>document.getElementById('reviewMsg').textContent='불러오기 오류');
+        .then(r => r.json()).then(d => {
+          wrongList = d.wrongList.map(x => x.question);
+          currentWrongIndex = 0;
+          loadQuestion(wrongList[0]);
+        })
+        .catch(() => document.getElementById('reviewMsg').textContent = '불러오기 오류');
     };
 
-    function loadQ(qno){
-      clearAllMsgs(); hideReviewUI();
-      const qi=document.getElementById('questionImage');
-      qi.src=`/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
+    function loadQuestion(qno) {
+      clearAllMsgs(); resetReviewUI();
+      const qi = document.getElementById('questionImage');
+      qi.src = `/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
       qi.classList.remove('hidden');
-      const cb=document.getElementById('choiceButtons');
-      [1,2,3,4,5].forEach(ch=>{
-        const btn=document.createElement('button');
-        btn.textContent=ch;
-        btn.onclick=()=>{selectedAnswer=ch;cb.querySelectorAll('button').forEach(b=>b.style.background='white');btn.style.background='#d0e6ff';};
+      const cb = document.getElementById('choiceButtons');
+      [1,2,3,4,5].forEach(ch => {
+        const btn = document.createElement('button');
+        btn.textContent = ch;
+        btn.onclick = () => {
+          selectedAnswer = ch;
+          cb.querySelectorAll('button').forEach(b=>b.style.background='white');
+          btn.style.background = '#d0e6ff';
+        };
         cb.appendChild(btn);
       });
-      const sub=document.getElementById('submitButton');
-      sub.classList.remove('hidden'); sub.onclick=()=>submitA(qno);
-      const skip=document.getElementById('skipButton');
-      skip.classList.remove('hidden'); skip.onclick=nextQ;
+      const sub = document.getElementById('submitButton');
+      sub.classList.remove('hidden');
+      sub.onclick = () => submitAnswer(qno);
+      const skip = document.getElementById('skipButton');
+      skip.classList.remove('hidden');
+      skip.onclick = () => nextQuestion();
     }
 
-    function submitA(qno){
-      if(selectedAnswer===null){document.getElementById('reviewMsg').textContent='선지 선택하세요';return;}
+    function submitAnswer(qno) {
+      if (selectedAnswer === null) {
+        document.getElementById('reviewMsg').textContent = '선지 선택하세요';
+        return;
+      }
       clearAllMsgs();
       fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${selectedAnswer}`)
-        .then(r=>r.json()).then(d=>{
+        .then(r => r.json()).then(d => {
           document.getElementById('reviewQuestion').classList.add('hidden');
-          const fb=document.getElementById('feedback');
-          fb.textContent=d.correct?'정답입니다!':'오답입니다.';
-          fb.style.color=d.correct?'#007bff':'#dc3545';
+          const fb = document.getElementById('feedback');
+          fb.textContent = d.correct?'정답입니다!':'오답입니다.';
+          fb.style.color = d.correct?'#007bff':'#dc3545';
           document.getElementById('reviewFeedback').classList.remove('hidden');
-          const re=document.getElementById('retryButton');
-          re.classList.remove('hidden'); re.onclick=()=>{
+          document.getElementById('retryButton').classList.remove('hidden');
+          document.getElementById('retryButton').onclick = () => {
             document.getElementById('reviewFeedback').classList.add('hidden');
             document.getElementById('reviewQuestion').classList.remove('hidden');
-            loadQ(qno);
+            loadQuestion(qno);
           };
-          const ex=document.getElementById('explainButton');
-          ex.classList.remove('hidden'); ex.onclick=()=>{
-            const ei=document.getElementById('questionImage');
-            ei.src=`/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
+          document.getElementById('explainButton').classList.remove('hidden');
+          document.getElementById('explainButton').onclick = () => {
+            const ei = document.getElementById('questionImage');
+            ei.src = `/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
             ei.classList.remove('hidden');
           };
-        }).catch(()=>document.getElementById('feedback').textContent='오류');
+        })
+        .catch(() => document.getElementById('feedback').textContent = '오류');
     }
 
-    function nextQ(){
+    function nextQuestion() {
       currentWrongIndex++;
       document.getElementById('reviewFeedback').classList.add('hidden');
       document.getElementById('reviewQuestion').classList.remove('hidden');
-      if(currentWrongIndex<wrongList.length) loadQ(wrongList[currentWrongIndex]);
-      else location.reload();
+      if (currentWrongIndex < wrongList.length) {
+        loadQuestion(wrongList[currentWrongIndex]);
+      } else {
+        location.reload();
+      }
     }
 
     // 홈 버튼
-    document.getElementById('homeButton').onclick=()=>{
-      hideAll(); clearAllMsgs(); hideReviewUI();
+    document.getElementById('homeButton').onclick = () => {
+      hideAll(); clearAllMsgs(); resetReviewUI();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
   </script>
 </body>
 </html>
-
 
