--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,160 +6,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GAIA 모의고사 복습 사이트</title>
   <style>
-    /* 기본 레이아웃 */
-    body {
-      margin: 0;
-      padding: 1rem;
-      font-family: sans-serif;
-      background: #f9f9f9;
-    }
-    .container {
-      max-width: 400px;
-      margin: 0 auto;
-      background: white;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    h1 {
-      margin: 0 0 0.5rem;
-      font-size: 1.5rem;
-      text-align: center;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    /* 로그인/메인 GIF */
-    .top-gif {
-      display: block;
-      width: 100%;
-      max-width: 200px;
-      height: auto;
-      margin: 0 auto 1rem;
-    }
-    /* 홈 버튼 */
-    .home-button {
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      margin-bottom: 1rem;
-      color: #007bff;
-    }
-    .home-button img {
-      width: 16px;
-      height: 16px;
-      margin-right: 0.25rem;
-    }
-    /* 공통 입력 요소 */
-    input, select, button {
-      display: block;
-      width: 100%;
-      padding: 0.75rem;
-      font-size: 1rem;
-      margin: 0.5rem 0;
-      box-sizing: border-box;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      background: #007bff;
-      color: white;
-      border: none;
-    }
-    p.error {
-      color: #d00;
-      font-size: 0.9rem;
-      margin: 0.25rem 0 0;
-      text-align: center;
-    }
-    /* 메뉴 버튼 */
-    .menu-button {
-      background: #28a745;
-      color: white;
-      font-size: 1rem;
-      margin-bottom: 0.75rem;
-    }
-    .menu-button:nth-child(2) { background: #ffc107; }
-    .menu-button:nth-child(3) { background: #dc3545; }
-    .hidden {
-      display: none !important;
-    }
-    .report-img {
-      display: block;
-      max-width: 100%;
-      margin: 0 auto;
-    }
-    /* 틀린 문제 전용 스타일 */
+    /* ── 공통 스타일 ── */
+    body { margin:0; padding:1rem; font-family:sans-serif; background:#f9f9f9; }
+    .container { max-width:400px; margin:0 auto; background:white; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
+    h1 { margin:0 0 .5rem; font-size:1.5rem; text-align:center; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+    .top-gif { display:block; width:100%; max-width:200px; height:auto; margin:0 auto 1rem; }
+    .home-button { display:flex; align-items:center; cursor:pointer; margin-bottom:1rem; color:#007bff; }
+    .home-button img { width:16px; height:16px; margin-right:.25rem; }
+    input, select, button { display:block; width:100%; padding:.75rem; font-size:1rem; margin:.5rem 0; box-sizing:border-box; border:1px solid #ccc; border-radius:4px; }
+    button { background:#007bff; color:white; border:none; }
+    p.error { color:#d00; font-size:.9rem; text-align:center; margin:.25rem 0 0; }
+    .menu-button { background:#28a745; color:white; font-size:1rem; margin-bottom:.75rem; }
+    .menu-button:nth-child(2) { background:#ffc107; }
+    .menu-button:nth-child(3) { background:#dc3545; }
+    .report-img { display:block; max-width:100%; margin:0 auto; }
+    .hidden { display:none !important; }
+
+    /* ── 틀린 문제 전용 스타일 ── */
     #questionImage {
-      width: 100%;
-      height: auto;
-      margin: 1rem 0;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+      display:block; width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px;
     }
-    #choiceButtons {
-      text-align: center;
-    }
+    #choiceButtons { text-align:center; }
     #choiceButtons button {
-      display: inline-block;
-      width: 18%;
-      margin: 1%;
-      padding: 0.75rem 0;
-      font-size: 1rem;
-      border: 1px solid #007bff;
-      border-radius: 4px;
-      background: white;
-      color: #007bff;
-      cursor: pointer;
+      display:inline-block; width:18%; margin:1%; padding:.75rem 0;
+      font-size:1rem; border:1px solid #007bff; border-radius:4px;
+      background:white; color:#007bff; cursor:pointer;
     }
-    #submitButton, #skipButton {
-      display: block;
-      width: 100%;
-      margin: 1rem 0;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+    #submitButton {
+      display:block; width:100%; margin:1rem 0; padding:.75rem; font-size:1rem;
+      background:#007bff; border:none; border-radius:4px; cursor:pointer;
     }
-    #submitButton { background: #007bff; }
-    #skipButton   { background: #6c757d; }
-    #feedback {
-      text-align: center;
-      font-size: 1.1rem;
-      margin-top: 1rem;
+    #feedback { text-align:center; font-size:1.1rem; margin-top:1rem; }
+    #retryButton, #explainButton, #nextButton {
+      display:block; width:100%; padding:.75rem; margin:.5rem 0; font-size:1rem;
+      border:none; border-radius:4px; cursor:pointer;
     }
-    #retryButton, #explainButton {
-      display: block;
-      width: 100%;
-      padding: 0.75rem;
-      margin: 0.5rem 0;
-      font-size: 1rem;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    #retryButton   { background: #007bff; color: white; }
-    #explainButton { background: #17a2b8; color: white; }
+    #retryButton   { background:#007bff; color:white; }
+    #explainButton { background:#17a2b8; color:white; }
+    #nextButton    { background:#28a745; color:white; }
   </style>
 </head>
 <body>
   <div class="container">
     <!-- 홈 버튼 -->
     <div id="homeButton" class="home-button hidden">
-      <img src="icons/home.png" alt="Home"> <span>처음으로</span>
+      <img src="icons/home.png" alt="Home"><span>처음으로</span>
     </div>
 
-    <!-- ① 로그인 페이지 -->
+    <!-- ① 로그인 페이지 (원본) -->
     <div id="loginSection">
       <h1>GAIA 모의고사 복습 사이트</h1>
-      <img src="globe.gif" class="top-gif" alt="Globe 로고">
-      <input type="text" id="loginId" placeholder="리클래스 ID 입력">
+      <img src="globe.gif" class="top-gif" alt="Globe">
+      <input id="loginId" placeholder="리클래스 ID 입력">
       <button id="loginBtn">로그인</button>
       <p id="loginMsg" class="error"></p>
     </div>
 
-    <!-- ② 회차 선택 페이지 -->
+    <!-- ② 회차 선택 페이지 (원본) -->
     <div id="examSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <select id="examSelect"></select>
@@ -167,7 +70,7 @@
       <p id="examMsg" class="error"></p>
     </div>
 
-    <!-- ③ 메뉴 페이지 -->
+    <!-- ③ 메뉴 페이지 (원본) -->
     <div id="menuSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <button id="menuReport" class="menu-button">1. 내 성적표 확인</button>
@@ -176,31 +79,31 @@
       <p id="menuMsg" class="error"></p>
     </div>
 
-    <!-- ④ 성적표 표시 페이지 -->
+    <!-- ④ 성적표 표시 페이지 (원본) -->
     <div id="reportSection" class="hidden">
       <h1>내 성적표</h1>
       <img id="reportImage" class="report-img" alt="성적표 이미지">
       <p id="reportMsg" class="error"></p>
     </div>
 
-    <!-- ⑤ 틀린 문제 다시 풀기 -->
+    <!-- ⑤ 틀린 문제 다시 풀기 (추가) -->
     <div id="reviewSection" class="hidden">
       <h1>틀린 문제 다시 풀기</h1>
 
       <!-- 문제 화면 -->
-      <div id="reviewQuestion">
+      <div id="reviewQuestionSection">
         <img id="questionImage" class="hidden" alt="문제 이미지">
         <div id="choiceButtons"></div>
         <button id="submitButton" class="hidden">제출하기</button>
-        <button id="skipButton"   class="hidden">SKIP</button>
         <p id="reviewMsg" class="error"></p>
       </div>
 
       <!-- 피드백 화면 -->
-      <div id="reviewFeedback" class="hidden">
+      <div id="reviewFeedbackSection" class="hidden">
         <p id="feedback"></p>
-        <button id="retryButton"   class="hidden">다시 풀어보기</button>
+        <button id="retryButton" class="hidden">다시 풀어보기</button>
         <button id="explainButton" class="hidden">해설 확인하기</button>
+        <button id="nextButton" class="hidden">다음 문제</button>
       </div>
     </div>
   </div>
@@ -211,23 +114,23 @@
 
     function hideAll() {
       ['loginSection','examSection','menuSection','reportSection','reviewSection']
-        .forEach(id=>document.getElementById(id).classList.add('hidden'));
+        .forEach(id => document.getElementById(id).classList.add('hidden'));
     }
-    function clearAllMsgs() {
-      ['loginMsg','examMsg','menuMsg','reviewMsg','feedback']
-        .forEach(id=>document.getElementById(id).textContent='');
+    function clearMsgs() {
+      ['loginMsg','examMsg','menuMsg','reportMsg','reviewMsg','feedback']
+        .forEach(id => document.getElementById(id).textContent = '');
     }
     function resetReviewUI() {
       document.getElementById('questionImage').classList.add('hidden');
-      document.querySelectorAll('#choiceButtons button').forEach(b=>b.remove());
-      ['submitButton','skipButton','retryButton','explainButton','reviewFeedback']
-        .forEach(id=>document.getElementById(id).classList.add('hidden'));
+      document.querySelectorAll('#choiceButtons button').forEach(b => b.remove());
+      ['submitButton','retryButton','explainButton','nextButton'].forEach(id =>
+        document.getElementById(id).classList.add('hidden'));
       selectedAnswer = null;
     }
 
     // 로그인
     document.getElementById('loginBtn').onclick = () => {
-      clearAllMsgs(); resetReviewUI();
+      clearMsgs(); resetReviewUI();
       const id = document.getElementById('loginId').value.trim();
       if (!id) {
         document.getElementById('loginMsg').textContent = 'ID를 입력하세요';
@@ -242,8 +145,7 @@
             // 회차 로드
             fetch('/api/exams').then(r=>r.json()).then(exs=>{
               const sel = document.getElementById('examSelect');
-              sel.innerHTML = '';
-              exs.forEach(e=>sel.add(new Option(e,e)));
+              sel.innerHTML = ''; exs.forEach(e=>sel.add(new Option(e,e)));
             });
           } else {
             document.getElementById('loginMsg').textContent = '인증되지 않은 ID입니다';
@@ -254,7 +156,7 @@
 
     // 회차 선택
     document.getElementById('examBtn').onclick = () => {
-      clearAllMsgs(); resetReviewUI();
+      clearMsgs(); resetReviewUI();
       const ex = document.getElementById('examSelect').value;
       if (!ex) {
         document.getElementById('examMsg').textContent = '회차 선택';
@@ -268,7 +170,7 @@
 
     // 내 성적표
     document.getElementById('menuReport').onclick = () => {
-      hideAll(); clearAllMsgs(); resetReviewUI();
+      hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('reportSection').classList.remove('hidden');
       fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
         .then(r => r.json()).then(d => {
@@ -280,7 +182,7 @@
 
     // 틀린 문제 다시 풀기
     document.getElementById('menuReview').onclick = () => {
-      hideAll(); clearAllMsgs(); resetReviewUI();
+      hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('reviewSection').classList.remove('hidden');
       fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
         .then(r => r.json()).then(d => {
@@ -292,7 +194,7 @@
     };
 
     function loadQuestion(qno) {
-      clearAllMsgs(); resetReviewUI();
+      clearMsgs(); resetReviewUI();
       const qi = document.getElementById('questionImage');
       qi.src = `/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
       qi.classList.remove('hidden');
@@ -302,66 +204,62 @@
         btn.textContent = ch;
         btn.onclick = () => {
           selectedAnswer = ch;
-          cb.querySelectorAll('button').forEach(b=>b.style.background='white');
+          cb.querySelectorAll('button').forEach(b => b.style.background = 'white');
           btn.style.background = '#d0e6ff';
         };
         cb.appendChild(btn);
       });
       const sub = document.getElementById('submitButton');
-      sub.classList.remove('hidden');
-      sub.onclick = () => submitAnswer(qno);
-      const skip = document.getElementById('skipButton');
-      skip.classList.remove('hidden');
-      skip.onclick = () => nextQuestion();
+      sub.classList.remove('hidden'); sub.onclick = () => submit(qno);
     }
 
-    function submitAnswer(qno) {
+    function submit(qno) {
       if (selectedAnswer === null) {
-        document.getElementById('reviewMsg').textContent = '선지 선택하세요';
+        document.getElementById('reviewMsg').textContent = '선지를 선택하세요';
         return;
       }
-      clearAllMsgs();
+      clearMsgs();
       fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${selectedAnswer}`)
         .then(r => r.json()).then(d => {
-          document.getElementById('reviewQuestion').classList.add('hidden');
+          document.getElementById('reviewQuestionSection').classList.add('hidden');
           const fb = document.getElementById('feedback');
-          fb.textContent = d.correct?'정답입니다!':'오답입니다.';
-          fb.style.color = d.correct?'#007bff':'#dc3545';
-          document.getElementById('reviewFeedback').classList.remove('hidden');
+          fb.textContent = d.correct ? '정답입니다!' : '오답입니다.';
+          fb.style.color = d.correct ? '#007bff' : '#dc3545';
+          document.getElementById('reviewFeedbackSection').classList.remove('hidden');
           document.getElementById('retryButton').classList.remove('hidden');
           document.getElementById('retryButton').onclick = () => {
-            document.getElementById('reviewFeedback').classList.add('hidden');
-            document.getElementById('reviewQuestion').classList.remove('hidden');
+            document.getElementById('reviewFeedbackSection').classList.add('hidden');
+            document.getElementById('reviewQuestionSection').classList.remove('hidden');
             loadQuestion(qno);
           };
           document.getElementById('explainButton').classList.remove('hidden');
           document.getElementById('explainButton').onclick = () => {
-            const ei = document.getElementById('questionImage');
+            const ei = document.getElementById('explanationImage');
             ei.src = `/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`;
             ei.classList.remove('hidden');
+            document.getElementById('nextButton').classList.remove('hidden');
+          };
+          document.getElementById('nextButton').classList.remove('hidden');
+          document.getElementById('nextButton').onclick = () => {
+            currentWrongIndex++;
+            document.getElementById('reviewFeedbackSection').classList.add('hidden');
+            document.getElementById('reviewQuestionSection').classList.remove('hidden');
+            if (currentWrongIndex < wrongList.length) {
+              loadQuestion(wrongList[currentWrongIndex]);
+            } else {
+              location.reload();
+            }
           };
         })
         .catch(() => document.getElementById('feedback').textContent = '오류');
     }
 
-    function nextQuestion() {
-      currentWrongIndex++;
-      document.getElementById('reviewFeedback').classList.add('hidden');
-      document.getElementById('reviewQuestion').classList.remove('hidden');
-      if (currentWrongIndex < wrongList.length) {
-        loadQuestion(wrongList[currentWrongIndex]);
-      } else {
-        location.reload();
-      }
-    }
-
     // 홈 버튼
     document.getElementById('homeButton').onclick = () => {
-      hideAll(); clearAllMsgs(); resetReviewUI();
+      hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
   </script>
 </body>
 </html>
-
